# BIMxBEM

./: .gitignore  .gitmodules  CMakeLists.txt  CheckListeRelSpaceBoundaryParLogiciel.ods  Notes.md  README.md  python4delphi.py  setup.py
FreeCAD/BIMxBEM/: MANIFEST.in  README.md  setup.py
IfcC++/: CMakeLists.txt  ifc_BIMxBEMEPFLEngine.sln
IfcC++/Debug/: ifc_BIMxBEMEPFLEngine.exp  ifc_BIMxBEMEPFLEngine.lib
IfcC++/ifc_BIMxBEMEPFLEngine/: CMakeLists.txt  LoadDataAtBEMFormat.cpp  LoadDataAtBEMFormat.h  ifcXML_File.cpp  ifcXML_File.h  ifc_BIMxBEMEPFLEngine.vcxproj  ifc_BIMxBEMEPFLEngine.vcxproj.filters  ifc_BIMxBEMEngine.cpp  ifc_BIMxBEMEngine.h  ifc_Tree.cpp  ifc_Tree.h  ifc_Tree.template.h  ifc_TreePostTreatment.cpp  ifc_TreePostTreatment.h
IfcPython/: 9000_BIMxBEM_TestModèle_ACAD.ifc  9000_BIMxBEM_TestModèle_R19.ifc  CMakeLists.txt  Readme.md  _unittest.py  bem_xml.py  display_boundaries.py  freecad_display_boundaries.py  ifcxmltest.py  main.py  read_boundaries.py  requirements.txt  unittest.py  write_to_ifc.py
IfcTestFiles/: .gitignore  2Storey_2x3_A22.ifc  2Storey_2x3_ACAD.ifcxml  2Storey_MN95_R19.ifc  2Storey_R19.ifc  ExternalEarth_R20_2x3.ifc  ExternalEarth_R20_IFC4.ifc  OverSplitted_R20_2x3.ifc  Triangle_2x3_A22.ifc  Triangle_2x3_A23.ifc  Triangle_A24_IFC4.ifc  Triangle_R19.ifc  split_space.py
freecad/bem/: LesoType.drawio  LesoType.md  bem_logging.py  bem_xml.py  boundaries.py  commands.py  entities.py  ifc_importer.py  manual_test.py  materials.py  progress.md  progress.py  test_boundaries.py  typing.pyi  (+1 more)
pybind11_examples/: CMakeLists.txt  example.cpp
(+31 files in other folders)
